--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -14,9 +14,8 @@
                 <action android:name="android.intent.action.MAIN" />
 
                 <category android:name="android.intent.category.LAUNCHER" />
+            </intent-filter>
 
-
-            </intent-filter/~~>
         </activity>
         <activity android:name=".IntentDemoActivity">
             <intent-filter>
